<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/editFilterNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter number"
        android:inputType="numberDecimal" />

</LinearLayout>