<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/home_page_title_button"
        android:icon="@drawable/baseline_home_24"
        android:id="@+id/home"/>
    <item android:title="@string/meals_page_title_button"
        android:icon="@drawable/outline_award_meal_24"
        android:id="@+id/meals"/>
    <item
        android:id="@+id/action_plans"
        android:icon="@drawable/baseline_language_24"
        android:title="@string/plans_page_title" />
    <item
        android:id="@+id/action_ingredients"
        android:icon="@drawable/baseline_search_24"
        android:title="@string/ingredients_page_title" />
    <item android:title="@string/settings_page_title_button"
        android:icon="@drawable/settings_24dp_e3e3e3_fill0_wght400_grad0_opsz24"
        android:id="@+id/settings"/>
</menu>