...
        android:layout_height="wrap_content"
        android:text="@string/plans_page_create_planNew"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listViewPlans"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginHorizontal="16dp" />

</LinearLayout>
...
